// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`root/headers.js text/html Should attempt to render response view with valid arity 1`] = `
[
  [
    "headers",
    {
      "headers": {
        "X-Key": "x-test-value",
      },
    },
  ],
]
`;

exports[`root/headers.js text/html Should attempt to resolve content negotiation selection with valid arity 1`] = `
[
  [
    "text/html",
  ],
]
`;

exports[`root/headers.js text/plain Should dispatch response body with valid arity 1`] = `
[
  [
    {
      "X-Key": "x-test-value",
    },
  ],
]
`;

exports[`root/headers.js text/plain Should dispatch response status with valid arity 1`] = `
[
  [
    200,
  ],
]
`;
